lab1/Test/L1-A-13-48.output
Error Type A at Line 6
Error Type B at Line 10
Error Type A at Line 14
Error Type B at Line 28
Error Type A at Line 29
