lab1/Test/L1-A-13-48.cmm
int R0I03lNJi6pOEAb ( struct {
  struct en5ZNRSV d3cpaFBOZ3s2sCrX ;
  struct kV7C85GdgYFTsMX hq2ge6vqRO ;
  struct xLYhfYfWbG_AxDr_pE5J pEa_is7U6leKnz0 ;
  struct QZdYg5a fYjkBR3Y8ZRIyr ;
  int @LMcwadjRMmcbjg ;
  int T1TslcDvIgOyG79B5_r ;
  int acD0Q ;
  float ViPEE3iNWISp_I = bs_LC4cw72hlcJZrb , Rnl0BJs7wad 
    638924642 ;
}IoVcmDeeDIwIhC [ 1956550070 ] ) {
  if ( hiuAS3 )   return QgW || cr && TQx5kc > - ! 
    _CfoBYxAh2HNbsOtzs ( suhPDl7GmLlEqhUS = Ixar + - DDnp3Lzizy1c31i 
    [ A_oVos >= ~HUjrbdRA7895H - n2wLMJeF08M0M4d4x_X / 
    - XzU80Nc1yXV_gsnf5 [ yQBp9CYGoT1oS8QBgV != VCUAc2OpqVIGrVDY54wI 
    / ( CUjNFvU || YnZyZVPaSNK4sNC5 <= FMAAjz3mjrgunXn2 
    + llaJ0ShpEc8B / Gyfu1TYnt75d ( H4970EjuLSGKs2xOix 
    , My0Z7 , Lf , wSAQbQG3LaAf = zCLiwvs247FHFe506Ff 
    == Ge87h3XdU * EJlgB ( U7IWIKZl9M < UYNjCithTAc ) 
    * OXBSwlfcl ) ) + 1549514684.1774068350 ] . WKq330TC_wYlYaX2T 
    ] / SvNBKbtyHZI ( ) * 1938248322 ) ;

}
int is2dICJmCwk 
;
struct ZmuzBJ1XI {
};
;
int @;
int ;
int hWzGiN , C6t 

;
int ;
int nxim4U71PMyZyOOEc ( ) {
}
int ;
int ;
int ;
int Pexg ( int fo , int X7by5t1B ) {
}
int ;
int p2rP6 ( ) {
}
int ;
int ;
int ;
int ;
int QkeLxaluTW91J69UBeZR ( ) {
  IJ45UxqdT3INhs ;
  QoWlNhgWn9UyrIwY ;
  if ( oNY )   F ;
else   if ( fRSujRdtew )   nL6JX6n0XiFG8zIKTJH ;
else   if ( EPehH5cB6h )   while ( VICmG1huylDwfAbGQ 
    ) {
    if ( wQ6Gl3Z7Pxl )     c11uETxRtk5Rlb8ab ;
else     uHT2unHyvF ;

  }



}
